edit build files

--- a/build.gradle
+++ b/build.gradle
@@ -1,22 +1,12 @@
 plugins {
-    id 'java'
+    id 'java-library'
     id 'checkstyle'
-    id 'maven-publish'
-    id 'com.github.johnrengelman.shadow' version '8.1.1'
     id 'io.freefair.aggregate-javadoc-jar' version '8.4'
 }
 
-jar.enabled = true
-
-dependencies {
-    implementation project(':pineapplechat-core')
-    implementation project(':pineapplechat-bungee')
-}
-
 subprojects {
-    apply plugin: 'java'
+    apply plugin: 'java-library'
     apply plugin: 'checkstyle'
-    apply plugin: 'com.github.johnrengelman.shadow'
     apply plugin: 'io.freefair.aggregate-javadoc-jar'
 
     dependencies {
@@ -46,34 +36,6 @@ subprojects {
 
     checkstyleMain {
         source = 'src/main/java'
-    }
-
-    publishing {
-        publications {
-            shadow(MavenPublication) { publication ->
-                project.shadow.component(publication)
-                publication.artifact(aggregateJavadocJar)
-
-                repositories {
-                    maven {
-                        url = 'https://maven.miles.sh/libraries'
-                        credentials {
-                            username = System.getenv('PINEAPPLE_REPOSILITE_USERNAME')
-                            password = System.getenv('PINEAPPLE_REPOSILITE_PASSWORD')
-                        }
-                    }
-                }
-            }
-        }
-    }
-
-    shadowJar {
-        archiveClassifier.set('')
-        archiveVersion.set('')
-    }
-
-    build {
-        dependsOn shadowJar
     }
 
     aggregateJavadoc.options {
