--- a/pineapplechat-bungee/build.gradle
+++ b/pineapplechat-bungee/build.gradle
@@ -1,12 +1,13 @@
 plugins {
-    id 'java'
+    id 'java-library'
+    id 'maven-publish'
     id 'me.champeau.jmh' version '0.7.2'
 }
 
 dependencies {
     // https://hub.spigotmc.org/stash/projects/SPIGOT/repos/spigot/browse/Bukkit-Patches/0010-BungeeCord-Chat-API.patch#15-21
     compileOnly 'net.md-5:bungeecord-chat:1.20-R0.1'
-    implementation project(':pineapplechat-core')
+    api project(':pineapplechat-core')
 
     jmh 'org.openjdk.jmh:jmh-core:0.9'
     jmh 'org.openjdk.jmh:jmh-generator-annprocess:0.9'
@@ -17,6 +18,23 @@ configurations {
     jmhImplementation.extendsFrom(compileOnly)
 }
 
-compileJava {
-    dependsOn(':pineapplechat-core:shadowJar')
+publishing {
+    publications {
+        shadow(MavenPublication) { publication ->
+            publication.artifact(aggregateJavadocJar)
+            groupId "sh.miles"
+            artifactId "$project.name"
+            version "$rootProject.version"
+
+            repositories {
+                maven {
+                    url = 'https://maven.miles.sh/libraries'
+                    credentials {
+                        username = System.getenv('PINEAPPLE_REPOSILITE_USERNAME')
+                        password = System.getenv('PINEAPPLE_REPOSILITE_PASSWORD')
+                    }
+                }
+            }
+        }
+    }
 }
