--- a/pineapplechat-minecraft-legacy/build.gradle
+++ b/pineapplechat-minecraft-legacy/build.gradle
@@ -1,10 +1,11 @@
 plugins {
-    id 'java'
+    id 'java-library'
+    id 'maven-publish'
     id 'me.champeau.jmh' version '0.7.2'
 }
 
 dependencies {
-    implementation project(':pineapplechat-core')
+    api project(':pineapplechat-core')
 
     jmh 'org.openjdk.jmh:jmh-core:0.9'
     jmh 'org.openjdk.jmh:jmh-generator-annprocess:0.9'
@@ -15,6 +16,23 @@ configurations {
     jmhImplementation.extendsFrom(compileOnly)
 }
 
-compileJava {
-    dependsOn(':pineapplechat-core:shadowJar')
+publishing {
+    publications {
+        shadow(MavenPublication) { publication ->
+            publication.artifact(aggregateJavadocJar)
+            groupId "sh.miles"
+            artifactId "$project.name"
+            version "$rootProject.version"
+
+            repositories {
+                maven {
+                    url = 'https://maven.miles.sh/libraries'
+                    credentials {
+                        username = System.getenv('PINEAPPLE_REPOSILITE_USERNAME')
+                        password = System.getenv('PINEAPPLE_REPOSILITE_PASSWORD')
+                    }
+                }
+            }
+        }
+    }
 }
